/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies { 
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = 'org.scc200g15.PixelPaint' // Define the main class for the application.
}

sourceSets {
    main {
        resources {
            srcDirs = ["src/main/resources"]
        }
    }
}


test {
    useJUnitPlatform()
}